[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/industrial.v2.png" type="Texture" id=1]
[ext_resource path="res://audio/walksquoosh.wav" type="AudioStream" id=2]
[ext_resource path="res://Scripts/saviya.gd" type="Script" id=3]
[ext_resource path="res://animations/hit.tres" type="Animation" id=4]
[ext_resource path="res://scenes/players/hitSpark.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/UI/notification.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.12628, 4.85232 )

[sub_resource type="ShaderMaterial" id=11]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6, 1.5 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sfx/sfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.262064, -3.01119 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CollisionShape2D/Sprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Sprite:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -9.0, 4.0, -2.0, 9.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D/Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D/Sprite:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.262064, -3.01119 ), Vector2( 0.262064, -6.01119 ), Vector2( 0.262064, 4.98881 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D/Sprite:visible")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.627556, 2.2453 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D/Sprite:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.11 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.65 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.440268, 2.01119 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.65 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.45
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.440268, 2.01119 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.76
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D/Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17, 18, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.262064, 2.01119 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:shape")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "walk_sound"
}, {
"args": [  ],
"method": "walk_sound"
} ]
}

[node name="saviya" type="KinematicBody2D"]
script = ExtResource( 3 )
sprite = NodePath("CollisionShape2D/Sprite")
sfx = NodePath("sfx/sfx")
animPlayer = NodePath("AnimationPlayer")
particle = NodePath("CollisionShape2D/Sprite/Particles2D")
ray = NodePath("RayCast2D")
pos2D = NodePath("Position2D")
hitSpark = ExtResource( 5 )
notification = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.440268, 2.01119 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
material = SubResource( 11 )
position = Vector2( 0.262064, -3.01119 )
texture = ExtResource( 1 )
hframes = 12
vframes = 2
frame = 2
region_enabled = true
region_rect = Rect2( 0, 0, 192, 32 )

[node name="Particles2D" type="CPUParticles2D" parent="CollisionShape2D/Sprite"]
position = Vector2( -1, 8 )
emitting = false
amount = 100
speed_scale = 2.0
explosiveness = 0.53
fixed_fps = 60
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 5, 1 )
scale_amount = 0.2
color = Color( 0.431373, 0.2, 0.152941, 0.447059 )

[node name="sfx" type="Node2D" parent="."]

[node name="sfx" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 10, 0 )
collide_with_areas = true

[node name="Position2D" type="Position2D" parent="."]
show_behind_parent = true
position = Vector2( 9, 0 )

[node name="groundArea" type="Area2D" parent="."]

[node name="groundShape" type="CollisionShape2D" parent="groundArea"]
position = Vector2( -1, 6.5 )
shape = SubResource( 10 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/damage = SubResource( 3 )
anims/fall = SubResource( 4 )
anims/grab = SubResource( 5 )
anims/hit = ExtResource( 4 )
anims/idle = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/walk = SubResource( 8 )

[connection signal="area_entered" from="groundArea" to="." method="_on_groundArea_area_entered"]
[connection signal="area_exited" from="groundArea" to="." method="_on_groundArea_area_exited"]
[connection signal="body_entered" from="groundArea" to="." method="_on_groundArea_body_entered"]
[connection signal="body_exited" from="groundArea" to="." method="_on_groundArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
